2010-10-06 Borut Razem <borut.razem AT siol.net>

	* sdcc/configure, sdcc/configure.in:
	  show non-free search paths
	* support/scripts/sdcc_mingw32, support/scripts/sdcc_cygwin_mingw32:
	  define non_free_include_dir_suffix and non_free_lib_dir_suffix

2010-10-05 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi:
	  added non-free/lib/pic*/*.lib files to the win32 setup package,
	  remove non-free on uninstall

2010-10-04 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: defined symbol SDCC_NON_FREE when --non-free command
	  line option is used
	* configure.in, configure, Makefile.in, device/lib/pic/configure.in,
	  device/lib/pic/configure, device/lib/pic/Makefile.in,
	  device/lib/pic/Makefile.common.in, device/lib/pic16/configure.ac,
	  device/lib/pic16/configure, device/lib/pic16/Makefile.am,
	  device/lib/pic16/Makefile.in,
	  device/lib/pic16/Makefile.common,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/libc/Makefile.in,
	  support/scripts/sdcc.nsi:
	  pic* device files moved to non-free
	* device/include/pic/*.h: moved to device/non-free/include/pic
	* device/include/pic16/*.h: moved to device/non-free/include/pic16
	* device/lib/pic/libdev/*.c, device/lib/pic/libdev/mkall.sh:
	  moved to device/non-freelib/pic/libdev
	* device/lib/pic16/libdev/*.c, device/lib/pic16/libdev/mkmk.sh,
	  device/lib/pic16/libdev/Makefile.am,
	  device/lib/pic16/libdev/Makefile.in:
	  moved to device/non-free/lib/pic16/libdev
	* device/lib/pic16/pics.all: moved to device/non-free/lib/pic16
	* device/non-free/include/Makefile.in,
	  device/non-free/include/clean.mk,
	  device/non-free/lib/pic16/config.h.in,
	  device/non-free/lib/pic16/configure,
	  device/non-free/lib/pic16/Makefile.in,
	  device/non-free/lib/pic16/configure.ac,
	  device/non-free/lib/pic16/Makefile.common,