@@ -10,10 +10,14 @@ else
 endif
 
 ifndef SDCC_BIN_PATH
-ifndef CROSSCOMPILING
-  SDCCFLAGS += --nostdinc -I$(top_srcdir)/device/include/pic -I$(top_srcdir)
-  LINKFLAGS += --nostdlib -L$(top_builddir)/device/lib/build/pic
-endif
+  ifndef CROSSCOMPILING
+    SDCCFLAGS += --nostdinc -I$(top_srcdir)/device/include/pic -I$(top_srcdir)/device/non-free/include/pic -I$(top_srcdir)
+    LINKFLAGS += --nostdlib -L$(top_builddir)/device/lib/build/pic -L$(top_builddir)/device/non-free/lib/build/pic
+  else
+    SDCCFLAGS += --non-free
+  endif
+else
+  SDCCFLAGS += --non-free
 endif
 
 ifdef CROSSCOMPILING
